# scape-agents

./: .gitignore  CLAUDE.md  clawtimeingest.txt  flake.nix  scape-agents.cabal
app/: Agent.hs
docs/plans/: 2026-02-23-zeroclaw-web-ui-design.md  2026-02-23-zeroclaw-web-ui-plan.md
modules/: agent.nix  base-vm.nix  template.nix
src/Scape/: Nats.hs
src/Scape/Agent/: API.hs  Executor.hs  Logging.hs  MMDS.hs  Metrics.hs  Nats.hs  Server.hs  State.hs  System.hs  Terminal.hs  VNC.hs  Vsock.hs
src/Scape/Agent/Stream/: SSE.hs  WebSocket.hs
src/Scape/Protocol/: AISDK.hs  Command.hs  Control.hs  MMDS.hs  Observation.hs  Transport.hs  Types.hs
templates/claude-code/: default.nix
templates/debug/: default.nix
templates/duckdb-analyst/: default.nix
templates/openclaw/: default.nix
templates/openoutreach/: default.nix
templates/python-sandbox/: default.nix
templates/zeroclaw/: default.nix
test/: Main.hs
test/Agent/: ExecutorSpec.hs  NatsSpec.hs  StateSpec.hs  TerminalSpec.hs  VNCSpec.hs
test/Integration/: AgentSpec.hs
test/Protocol/: CommandSpec.hs  MMDSSpec.hs  ObservationSpec.hs
test/Test/: Nats.hs
